Make sure profile picture on follows and following page is not distorted

--- a/app/assets/stylesheets/follow-page.css
+++ b/app/assets/stylesheets/follow-page.css
@@ -34,6 +34,10 @@
 
 .user .profile-picture {
 	border-radius: 20px;
+
+	width: 40px;
+	height: 40px;
+	object-fit: cover;
 }
 
 .users .username {
