--- a/app/assets/stylesheets/following-page.css
+++ b/app/assets/stylesheets/following-page.css
@@ -34,7 +34,10 @@
 
 .followee .profile-picture {
 	border-radius: 20px;
-	aspect-ratio: 1/1;
+	
+	width: 40px;
+	height: 40px;
+	object-fit: cover;
 }
 
 .followees .followeename {
